@@ -409,8 +409,9 @@
 25) kernel: tcp: tcp_make_synack() consumes dst parameter.<br>
 26) kernel: tcp: remove unused tw_cookie_values from tcp_timewait_sock.<br>
 27) kernel: tcp: remove TCPCT.<br>
-28) kernel: ipv6: fix 'inet6_rtm_getroute' to release 'rt->dst' in case of 'alloc_skb' failure.<br>
-29) kernel: neigh: remove dynamic neigh table registration support.<br>
+28) kernel: tcp: use TCP_SKB_CB(skb)->tcp_flags in input path.<br>
+29) kernel: ipv6: fix 'inet6_rtm_getroute' to release 'rt->dst' in case of 'alloc_skb' failure.<br>
+30) kernel: neigh: remove dynamic neigh table registration support.<br>
 <br>
 <br>
 <b>TODO:</b><br>
